В окне конфигурации мода теперь видно длинные названия предметов Добавлена поддержка создания предметов со стилями. Улучшено создание модов. Добавлен файл start.bat для запуска программы. Изменена структура работы с модами.

--- a/.gitignore
+++ b/.gitignore
@@ -14,7 +14,6 @@ dist/
 downloads/
 eggs/
 .eggs/
-lib/
 lib64/
 parts/
 sdist/
@@ -101,15 +100,6 @@ celerybeat.pid
 # SageMath parsed files
 *.sage.py
 
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
 # Spyder project settings
 .spyderproject
 .spyproject
@@ -133,3 +123,5 @@ items_game.txt
 items_russian.txt
 config.py
 Макет программы.psd
+mod_info.yaml
+config.yaml
